# CDT

./: CMakeLists.txt
include/CDT/: hand_optimized_predicates.hpp  implicit_point.h  implicit_point.hpp  indirect_predicates.h  indirect_predicates.hpp  memPool.h  numeric_wrapper.h  numerics.h  numerics.hpp
src/: PLC.cpp  PLC.h  delaunay.cpp  delaunay.h  giftWrap.cpp  inputPLC.h  logger.h  main.cpp
